Prevents CSS inliner from exiting when optional config file is not provided
- If the config file is not provided, its URI will be wrong and an exception was mistakenly thrown